<resources>
    <string name="app_name">MVP SadaPay</string>
    <string name="refresh">refresh</string>
    <string name="clear">clear</string>
    // error strings
    <string name="something_went_wrong">Something went wrong..</string>
    <string name="an_alien_is_probably_blocking_your_signal">An alien is probably blocking your signal.</string>
    <string name="retry">retry</string>
    <string name="no_internet">No Internet</string>
    <string name="internet_available">But Internet is available now you can click retry.</string>
    <string name="db_cleared">The database has been cleared by you click on retry to download data.</string>
</resources>